--- a/Sythnea_test/dataViewer.ipynb
+++ b/Sythnea_test/dataViewer.ipynb
@@ -1305,11 +1305,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Body Height',\n",
+       "       'Pain severity - 0-10 verbal numeric rating [Score] - Reported',\n",
+       "       'Body Weight', 'Body Mass Index', 'Diastolic Blood Pressure',\n",
+       "       'Systolic Blood Pressure', 'Heart rate', 'Respiratory rate',\n",
+       "       'Body temperature',\n",
+       "       'Body mass index (BMI) [Percentile] Per age and gender',\n",
+       "       'Leukocytes [#/volume] in Blood by Automated count',\n",
+       "       'Tobacco smoking status NHIS',\n",
+       "       'Erythrocytes [#/volume] in Blood by Automated count',\n",
+       "       'Hemoglobin [Mass/volume] in Blood',\n",
+       "       'Hematocrit [Volume Fraction] of Blood by Automated count',\n",
+       "       'MCV [Entitic volume] by Automated count',\n",
+       "       'MCH [Entitic mass] by Automated count',\n",
+       "       'MCHC [Mass/volume] by Automated count',\n",
+       "       'Erythrocyte distribution width [Entitic volume] by Automated count',\n",
+       "       'Platelets [#/volume] in Blood by Automated count',\n",
+       "       'Platelet distribution width [Entitic volume] in Blood by Automated count',\n",
+       "       'Platelet mean volume [Entitic volume] in Blood by Automated count',\n",
+       "       'Total Cholesterol', 'Triglycerides',\n",
+       "       'Low Density Lipoprotein Cholesterol',\n",
+       "       'High Density Lipoprotein Cholesterol', 'QALY', 'DALY', 'QOLS',\n",
+       "       'Weight-for-length Per age and sex',\n",
+       "       'Head Occipital-frontal circumference',\n",
+       "       'Hematocrit [Volume Fraction] of Blood', 'WBC Auto (Bld) [#/Vol]',\n",
+       "       'RBC Auto (Bld) [#/Vol]',\n",
+       "       'RDW - Erythrocyte distribution width Auto (RBC) [Entitic vol]',\n",
+       "       'Hemoglobin A1c/Hemoglobin.total in Blood', 'Glucose',\n",
+       "       'Urea Nitrogen', 'Creatinine', 'Calcium', 'Sodium', 'Potassium',\n",
+       "       'Chloride', 'Carbon Dioxide', 'DXA [T-score] Bone density',\n",
+       "       'Response to cancer treatment',\n",
+       "       'Site of distant metastasis in Breast tumor',\n",
+       "       'Distant metastases.clinical [Class] Cancer',\n",
+       "       'Size.maximum dimension in Tumor',\n",
+       "       'Primary tumor.clinical [Class] Cancer',\n",
+       "       'Lymph nodes with macrometastases [#] in Cancer specimen by Light microscopy',\n",
+       "       'Regional lymph nodes.clinical [Class] Cancer',\n",
+       "       'HER2 [Presence] in Breast cancer specimen by Immune stain',\n",
+       "       'HER2 [Presence] in Breast cancer specimen by FISH',\n",
+       "       'Estrogen receptor Ag [Presence] in Breast cancer specimen by Immune stain',\n",
+       "       'Progesterone receptor Ag [Presence] in Breast cancer specimen by Immune stain',\n",
+       "       'Stage group.clinical Cancer', 'Treatment status Cancer',\n",
+       "       'Peanut IgE Ab in Serum', 'Walnut IgE Ab in Serum',\n",
+       "       'Codfish IgE Ab in Serum', 'Shrimp IgE Ab in Serum',\n",
+       "       'Wheat IgE Ab in Serum', 'Egg white IgE Ab in Serum',\n",
+       "       'Soybean IgE Ab in Serum', 'Cow milk IgE Ab in Serum',\n",
+       "       'White oak IgE Ab in Serum', 'Common Ragweed IgE Ab in Serum',\n",
+       "       'Cat dander IgE Ab in Serum',\n",
+       "       'American house dust mite IgE Ab in Serum',\n",
+       "       'Cladosporium herbarum IgE Ab in Serum',\n",
+       "       'Honey bee IgE Ab in Serum', 'Latex IgE Ab in Serum',\n",
+       "       'Glomerular filtration rate/1.73 sq M.predicted',\n",
+       "       'Protein [Mass/volume] in Serum or Plasma',\n",
+       "       'Albumin [Mass/volume] in Serum or Plasma',\n",
+       "       'Globulin [Mass/volume] in Serum by calculation',\n",
+       "       'Bilirubin.total [Mass/volume] in Serum or Plasma',\n",
+       "       'Alkaline phosphatase [Enzymatic activity/volume] in Serum or Plasma',\n",
+       "       'Alanine aminotransferase [Enzymatic activity/volume] in Serum or Plasma',\n",
+       "       'Aspartate aminotransferase [Enzymatic activity/volume] in Serum or Plasma',\n",
+       "       'Polyp size greatest dimension by CAP cancer protocols',\n",
+       "       'Hemoglobin.gastrointestinal [Presence] in Stool by Immunologic method',\n",
+       "       'Microalbumin Creatinine Ratio',\n",
+       "       'Estimated Glomerular Filtration Rate',\n",
+       "       'Estrogen+Progesterone receptor Ag [Presence] in Tissue by Immune stain',\n",
+       "       'Appearance of Urine', 'Odor of Urine', 'Clarity of Urine',\n",
+       "       'Color of Urine', 'Glucose [Mass/volume] in Urine by Test strip',\n",
+       "       'Glucose [Presence] in Urine by Test strip',\n",
+       "       'Bilirubin.total [Mass/volume] in Urine by Test strip',\n",
+       "       'Bilirubin.total [Presence] in Urine by Test strip',\n",
+       "       'Ketones [Mass/volume] in Urine by Test strip',\n",
+       "       'Ketones [Presence] in Urine by Test strip',\n",
+       "       'Specific gravity of Urine by Test strip',\n",
+       "       'pH of Urine by Test strip',\n",
+       "       'Protein [Mass/volume] in Urine by Test strip',\n",
+       "       'Protein [Presence] in Urine by Test strip',\n",
+       "       'Nitrite [Presence] in Urine by Test strip',\n",
+       "       'Hemoglobin [Presence] in Urine by Test strip',\n",
+       "       'Leukocyte esterase [Presence] in Urine by Test strip', 'FEV1/FVC',\n",
+       "       'Thyroxine (T4) free [Mass/volume] in Serum or Plasma',\n",
+       "       'Thyrotropin [Units/volume] in Serum or Plasma',\n",
+       "       'Lymph nodes with isolated tumor cells [#] in Cancer specimen by Light microscopy',\n",
+       "       'Tumor marker Cancer', 'Physical findings of Prostate',\n",
+       "       'Prostate specific Ag [Mass/volume] in Serum or Plasma',\n",
+       "       'Lymph nodes with micrometastases [#] in Cancer specimen by Light microscopy',\n",
+       "       'Sexual orientation', 'HIV status', 'Abuse Status [OMAHA]',\n",
+       "       'Housing status',\n",
+       "       'Are you covered by health insurance or some other kind of health care plan [PhenX]',\n",
+       "       'History of Hospitalizations+Outpatient visits',\n",
+       "       'Total score [MMSE]', 'US Guidance for biopsy of Prostate',\n",
+       "       'NT-proBNP', 'Left ventricular Ejection fraction',\n",
+       "       'Oxygen saturation in Arterial blood',\n",
+       "       'Cause of Death [US Standard Certificate of Death]',\n",
+       "       'Weight difference [Mass difference] --pre dialysis - post dialysis',\n",
+       "       'Percentage area affected by eczema Head and Neck',\n",
+       "       'Percentage area affected by eczema Trunk',\n",
+       "       'Percentage area affected by eczema Upper extremitiy - bilateral',\n",
+       "       'Percentage area affected by eczema Lower extremitiy - bilateral',\n",
+       "       'Mental health Outpatient Note'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df0=observations_df.loc[observations_df['PATIENT']=='034e9e3b-2def-4559-bb2a-7850888ae060']"
+    "#df0=observations_df.loc[observations_df['DESCRIPTION']=='']\n",
+    "observations_df.DESCRIPTION.unique()"
    ]
   }
  ],
