added new data loop

--- a/Sythnea_test/hierachical_Synthea-BD.ipynb
+++ b/Sythnea_test/hierachical_Synthea-BD.ipynb
@@ -159,6 +159,21 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "patient_ids=set()\n",
+    "for patient_id in dfo[\"PATIENT\"]:\n",
+    "    patient_ids.add(patient_id)\n",
+    "patient_ids=list(patient_ids)\n",
+    "patient_ids.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -181,7 +196,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PATIENT</th>\n",
+       "      <th>patient_id</th>\n",
        "      <th>Body Height</th>\n",
        "      <th>Body Weight</th>\n",
        "      <th>Body Mass Index</th>\n",
@@ -194,7 +209,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>660bec03-9e58-47f2-98b9-2f1c564f3838</td>\n",
+       "      <td>00004593-87ae-40ac-bfec-7e2dd37b690f</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -205,7 +220,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5125d2b2-3aef-4ae2-aa5c-335f7e206b92</td>\n",
+       "      <td>00005a31-23bc-46dc-9dcd-13337680b90e</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -216,7 +231,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>26626faf-cbd5-48d5-a3bf-a7b21ae08e4b</td>\n",
+       "      <td>000120e2-63aa-404c-8842-d6ddc96f6dec</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -227,7 +242,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>f509a0f0-77ef-477f-977d-e2784a241b52</td>\n",
+       "      <td>000177c6-f76b-432b-9493-5a88bc9fb6bd</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -238,7 +253,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4c763cac-b1df-4bcc-b89c-834942c4d3d6</td>\n",
+       "      <td>0002bd42-7fcc-4a88-aa2b-6d6539b34b58</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -252,66 +267,39 @@
        "</div>"
       ],
       "text/plain": [
-       "                                PATIENT  Body Height  Body Weight  \\\n",
-       "0  660bec03-9e58-47f2-98b9-2f1c564f3838          NaN          NaN   \n",
-       "1  5125d2b2-3aef-4ae2-aa5c-335f7e206b92          NaN          NaN   \n",
-       "2  26626faf-cbd5-48d5-a3bf-a7b21ae08e4b          NaN          NaN   \n",
-       "3  f509a0f0-77ef-477f-977d-e2784a241b52          NaN          NaN   \n",
-       "4  4c763cac-b1df-4bcc-b89c-834942c4d3d6          NaN          NaN   \n",
+       "                             patient_id Body Height Body Weight  \\\n",
+       "0  00004593-87ae-40ac-bfec-7e2dd37b690f         NaN         NaN   \n",
+       "1  00005a31-23bc-46dc-9dcd-13337680b90e         NaN         NaN   \n",
+       "2  000120e2-63aa-404c-8842-d6ddc96f6dec         NaN         NaN   \n",
+       "3  000177c6-f76b-432b-9493-5a88bc9fb6bd         NaN         NaN   \n",
+       "4  0002bd42-7fcc-4a88-aa2b-6d6539b34b58         NaN         NaN   \n",
        "\n",
-       "   Body Mass Index  Diastolic Blood Pressure  Systolic Blood Pressure  \\\n",
-       "0              NaN                       NaN                      NaN   \n",
-       "1              NaN                       NaN                      NaN   \n",
-       "2              NaN                       NaN                      NaN   \n",
-       "3              NaN                       NaN                      NaN   \n",
-       "4              NaN                       NaN                      NaN   \n",
+       "  Body Mass Index Diastolic Blood Pressure Systolic Blood Pressure Heart rate  \\\n",
+       "0             NaN                      NaN                     NaN        NaN   \n",
+       "1             NaN                      NaN                     NaN        NaN   \n",
+       "2             NaN                      NaN                     NaN        NaN   \n",
+       "3             NaN                      NaN                     NaN        NaN   \n",
+       "4             NaN                      NaN                     NaN        NaN   \n",
        "\n",
-       "   Heart rate  Respiratory rate  \n",
-       "0         NaN               NaN  \n",
-       "1         NaN               NaN  \n",
-       "2         NaN               NaN  \n",
-       "3         NaN               NaN  \n",
-       "4         NaN               NaN  "
+       "  Respiratory rate  \n",
+       "0              NaN  \n",
+       "1              NaN  \n",
+       "2              NaN  \n",
+       "3              NaN  \n",
+       "4              NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfm=pd.DataFrame()\n",
-    "dfm['PATIENT']=dataOG['ID']\n",
-    "dfm['Body Height']=np.nan\n",
-    "dfm['Body Weight']=np.nan\n",
-    "dfm['Body Mass Index']=np.nan\n",
-    "dfm['Diastolic Blood Pressure']=np.nan\n",
-    "dfm['Systolic Blood Pressure']=np.nan\n",
-    "dfm['Heart rate']=np.nan\n",
-    "dfm['Respiratory rate']=np.nan\n",
+    "columns=[\"patient_id\",\"Body Height\",\"Body Weight\", \"Body Mass Index\",\"Diastolic Blood Pressure\",\n",
+    "         \"Systolic Blood Pressure\",\"Heart rate\",\"Respiratory rate\"]\n",
+    "dfm=pd.DataFrame(columns=columns)\n",
+    "dfm[\"patient_id\"]=patient_ids\n",
     "dfm.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#DISCLAIMER:stole this bit from Justin\n",
-    "columns=[\"Body Height\",\"Body Weight\",\"Body Mass Index\",\"Diastolic Blood Pressure\",\"Systolic Blood Pressure\"\n",
-    "         ,\"Heart rate\",\"Respiratory rate\"]\n",
-    "patients=[]\n",
-    "descriptions=[]\n",
-    "values=[]\n",
-    "\n",
-    "for index,row, in dfo [[\"PATIENT\", \"DESCRIPTION\", \"VALUE\"]].iterrows():\n",
-    "    if row[\"DESCRIPTION\"] in columns:\n",
-    "        for column in columns:\n",
-    "            if row[\"DESCRIPTION\"]==column:\n",
-    "                patients.append(row[\"PATIENT\"])\n",
-    "                descriptions.append(column)\n",
-    "                values.append(row[\"VALUE\"])"
    ]
   },
   {
@@ -323,14 +311,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query=pd.DataFrame()\n",
+    "for column in columns[1:]:\n",
+    "    query=pd.concat([query,dfo.query(f\"DESCRIPTION=='{column}'\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index, row in dfm.iterrows():\n",
-    "    for pat, desc, val in zip(patients, descriptions, values):\n",
-    "        if pat==row['PATIENT']:\n",
-    "            dfm.loc[dfm.PATIENT==pat,desc]=val"
+    "for index_dfo,row_dfo in list(query[[\"PATIENT\",\"DESCRIPTION\",\"VALUE\"]].iterrows()):\n",
+    "    if row_dfo[\"DESCRIPTION\"] in columns:\n",
+    "        dfm.loc[dfm.patient_id==row_dfo[\"PATIENT\"],row_dfo[\"DESCRIPTION\"]]= row_dfo[\"VALUE\"]"
    ]
   },
   {
@@ -386,6 +384,7 @@
     "dfcopy=df.copy()\n",
     "dfcopy=dfcopy.dropna()\n",
     "dfcopy=dfcopy.sample(frac=1, random_state=7896)\n",
+    "dfcopy.to_csv()\n",
     "dfcopy.head()"
    ]
   },
@@ -710,7 +709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
